--- a/public/styles.css
+++ b/public/styles.css
@@ -2,8 +2,14 @@ html, body {
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
     background-color: #000000;
-
+    margin: 0;
+    height: 100vw;
+    width: auto;
     color: #E0E0E0;
+}
+
+h1 {
+    margin: 0;
 }
 
 #logInCard {
@@ -16,12 +22,17 @@ html, body {
     width: 20%;
     height: 30%;
     text-align: center;
+    margin-top: 1em;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#logInCard h1 {
+    margin-top: 0.8em;
 }
 
 #logInCard p {
