responsive margin-top for loginCard

--- a/public/styles.css
+++ b/public/styles.css
@@ -24,7 +24,7 @@ header h1 {
     padding: 0 3vw;
     height: 30%;
     text-align: center;
-    margin-top: 1em;
+    margin-top: 10vh;
     margin-left: auto;
     margin-right: auto;
     display: flex;
