--- a/public/styles.css
+++ b/public/styles.css
@@ -82,23 +82,81 @@ header h1 {
     justify-content: flex-end;
     align-items: center;
     gap: 2vw;
-    list-style: none;
     height: auto;
-    padding: 0;
-    margin: 4vh 4vw;
+    margin: 0;
     font-size: clamp(1vw, 1em, 2vw);
+    background: #18191b;
 }
 
 #dashNav, #dashNav a {
     color: white;
+    font-size: clamp(1em, 1vw, 3vw);
 }
 
 #dashNav a {
-    background-color: red;
-    height: auto;
+    background-color: #255faa;
+    padding: 2vh 2vw;
     text-decoration: none;
+    margin-right: 8vw;
 }
 
-#dashNav li:nth-child(1) {
+#dashNav a:hover {
+    background-color: #62a6ff;
+}
+
+#dashNav #logOutButton {
     margin-right: auto;
+    margin-left: 8vw;
+}
+
+#exerciseCard {
+    background: #18191b;
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    padding: 2vh 2vw;
+    gap: 2vw;
+    width: auto;
+    overflow: hidden;
+}
+
+#exerciseCard h3#exerciseTitle {
+    text-align: center;
+    margin: 0;
+    border-radius: 1em;
+    font-size: 1em;
+    padding: 2.4vw;
+}
+
+
+#exerciseCard div#exerciseLastWeight {
+    background-color: #255faa;
+    font-size: 1em;
+    border-radius: 1em;
+    padding: 2.4vw;
+    font-weight: bold;
+}
+
+#exerciseCard #newExerciseWeight {
+    background-color: #255faa;
+    color: white;
+    width: 12vw;
+    padding: 2.4vw;
+    border-radius: 1em;
+    font-size: 1em;
+    border: none;
+}
+
+#exerciseCard #newExerciseWeight:focus {
+    outline: solid #62a6ff;
+}
+
+#exerciseCard #updateExercise {
+    padding: 2.4vw;
+    border-radius: 1em;
+    border: none;
+    color: white;
+    background-color: #255faa;
 }
