--- a/public/styles.css
+++ b/public/styles.css
@@ -183,3 +183,71 @@ header h1 {
     border-radius: 1em;
 }
 
+#buttonHeader {
+    text-align: center;
+}
+
+#addExerciseButton {
+    outline: 2px white solid;
+    border: none;
+    color: white;
+    background-color: transparent;
+    font-weight: 600;
+    border-radius: 50%;
+    margin: 1% 0;
+    width: fit-content;
+    height: auto;
+    font-size: clamp(1.4em, 3vw, 2em);
+    transition: all 0.2s ease-in;
+    cursor: pointer;
+}
+
+#addExerciseButton:hover {
+    outline:none;
+    color: black;
+    background-color: #255faa;
+}
+
+#addExerciseButton::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.24);
+    backdrop-filter: blur(2px);
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+#addExerciseButton.formBlur::before {
+    visibility: visible;
+}
+
+
+#addExercisePopup {
+    position: fixed;
+    top: 50%;
+    width: 100%;
+}
+
+#addExerciseForm {
+    background: #18191b;
+    padding:  0.5% 2% 3% 2%;
+    border-radius: 1em;
+    display: flex;
+    width: 60%;
+    min-width: fit-content;
+    max-width: 400px;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#addExerciseForm h2 {
+    margin-bottom: 10%;
+}
+
