--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,7 @@ html, body {
     box-sizing: border-box;
     background-color: #EDEDED;
     margin: 0;
-    height: 100vh;
+    height: fit-content;
     width: auto;
     color: black;
 }
@@ -113,8 +113,8 @@ header h1 {
 }
 
 .list-group-item {
-    background-color: white;
-    color: black !important;
+    background-color: #8D8D8D;
+    color: white !important;
 }
 
 #exerciseCard {
@@ -160,7 +160,11 @@ header h1 {
 }
 
 #exerciseCard #newExerciseWeight {
-    background-color: #62a6ff;
+    background-color: #D9D9D9;
+    color: white;
+}
+
+#exerciseCard #newExerciseWeight::placeholder {
     color: white;
 }
 
@@ -175,11 +179,11 @@ header h1 {
 #exerciseCard button#updateExercise,
 #exerciseCard button#deleteExercise {
     color: white;
-    background-color: #62a6ff;
+    background-color: #D9D9D9;
 }
 
-#exerciseCard button#updateExercise i:hover,
-#exerciseCard button#deleteExercise i:hover {
+#exerciseCard button#updateExercise:hover i,
+#exerciseCard button#deleteExercise:hover i {
     transition: all 0.3s ease-in-out;
     transform: scale(1.5);
 }
@@ -240,7 +244,7 @@ header h1 {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.24);
+    background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(2px);
     position: absolute;
     display: block;
@@ -248,6 +252,7 @@ header h1 {
     left: 0;
     pointer-events: none;
     visibility: hidden;
+    z-index: 1;
 }
 
 #addExerciseButton.formBlur::before {
@@ -262,20 +267,53 @@ header h1 {
 }
 
 #addExerciseForm {
-    background: #18191b;
+    background: white;
     padding:  0.5% 2% 3% 2%;
     border-radius: 1em;
     display: flex;
     width: 60%;
     min-width: fit-content;
     max-width: 400px;
+    gap: 2em;
     flex-direction: column;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
 }
 
+#addExerciseForm input, #addExerciseForm button {
+    border-radius: 0.4em;
+    outline: none;
+    transition: all 0.2s ease-in-out;
+}
+
+#addExerciseForm input {
+    border: 4px solid #D9D9D9;
+}
+
+#addExerciseForm input:focus, #addExerciseForm input:active {
+    border-color: #62a6ff;
+}
+
+#addExerciseForm input:invalid {
+    border-color: red;
+}
+
+#addExerciseForm button {
+    border: none;
+    width: 180px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#addExerciseForm button:hover {
+    transform: scale(1.05);
+}
+
 #addExerciseForm h2 {
     margin-bottom: 10%;
+    padding: 5% 20px 0 20px;
+    text-align: center;
 }
 
